Add model arguments
